# websocket-voice

./: .dockerignore  .gitignore  Dockerfile  README.md  combined_app.py  fly.toml  pyproject.toml
agent/: agent.py  env.example  pyproject.toml
client/: README.md  package-lock.json  package.json
client/.claude/: launch.json
client/src/: app.ts
scripts/: configure.sh  destroy.sh  launch.sh  setup-iam-role.sh
server/: README.md  env.example  pyproject.toml  server.py
